底层api改用Path2D以提高渲染性能；旋转和形变算法改用svg矩阵

--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 <body>
     
 
-<canvas id="canvas" style="background-color: #eee">
+<canvas id="canvas" style="background-color: #eee" width="500" height="500">
 
 </canvas>
 
@@ -77,18 +77,17 @@ c.join(s1);
 c.join(s2);
 
 
+
 p.append(c);
-p.append(cu);
 
-c.x(60).y(80);
+// c.x(60).y(80);
 
-s1.y(60);
-s2.x(200);
+// s1.y(60);
+// s2.x(200);
 
 console.log('图形数量:' + p.getShapesCount());
 
 
-console.log(/^on./g.test('Mouseoveron'));
 
 </script>
 </body>
