--- a/main.html
+++ b/main.html
@@ -23,6 +23,7 @@
 <script src="./dist/bundle.js"></script>
 <script>
 
+
 const prender = P2.default;
 
 const p = new prender(document.getElementById("canvas"), {
@@ -33,24 +34,45 @@ const p = new prender(document.getElementById("canvas"), {
 
 let clickFlag = true;
 
+
+
 const rr1 = new p.shapes.RoundRect({
     pin: [200, 200],
     color: 'green',
     round: 30,
     edge: [160, 160],
     onMouseOver: function(e) {
-        console.log('进来了');
         this.attr('color', 'red');
     },
     onMouseOut: function(e) {
-        console.log('出去了');
         this.attr('color', 'green');
     },
     onClick: function(e) {
-        console.log('点击了');
         this.attr('rotate', clickFlag? 45: 0);
+        text1.attr('rotate', clickFlag? 45: 0);
         clickFlag = !clickFlag;
-    }
+    },
+    onKeyPress: [{
+        keyCode: 39,
+        fn: function(e) {
+            this.attr('x', this.attr('x') + 10);
+        }
+    }, {
+        keyCode: 38,
+        fn: function(e) {
+            this.attr('y', this.attr('y') - 10);
+        }
+    }, {
+        keyCode: 37,
+        fn: function(e) {
+            this.attr('x', this.attr('x') - 10);
+        }
+    }, {
+        keyCode: 40,
+        fn: function(e) {
+            this.attr('y', this.attr('y') + 10);
+        }
+    }]
 });
 
 
@@ -68,36 +90,27 @@ const r2 = new p.shapes.Rectangle({
     fill: true,
     color: 'orange',
     onClick: function(e) {
-        console.log('点击了');
-        this.attr('rotate', clickFlag? 0: 45);
+        this.attr('rotate', clickFlag? 45: 0);
         clickFlag = !clickFlag;
     }
 });
 
 
-const t1 = new p.shapes.Triangle({
-    pin: [510, 100],
-    edge: 100,
-    fill: true,
-    color: 'pink',
-    rotate: 90,
-    onClick: function(e) {
-        console.log('点击了');
-        this.attr('rotate', clickFlag? 0: 90);
-        clickFlag = !clickFlag;
-    }
-});
 
-const t2 = new p.shapes.Triangle({
-    pin: [510, 100],
-    edge: 100,
-    fill: true,
-    color: 'yellow'
+const text1 = new p.shapes.Text({
+    pin: [r2.attr('x'), r2.attr('y') + 20],
+    content: 'PHENOM',
+    color: '#666',
+    fontSize: 20,
+    rotate: 45
 });
 
 
-
-
+const c1 = new p.shapes.Composite({
+    pin: [r2.attr('x'), r2.attr('y')],
+    shapes: [r2, text1],
+    center: r2.attr('center')
+});
 
 
 
@@ -106,12 +119,9 @@ const t2 = new p.shapes.Triangle({
 
 const g1 = new p.shapes.Group();
 
-g1.append([r2, t1, rr1]);
+//g1.append([c1, rr1]);
 
-p.append(t2);
-p.append(g1);
-
-
+p.append(rr1);
 
 
 
