--- a/BarChart.html
+++ b/BarChart.html
@@ -16,14 +16,19 @@
     height: 500px;
 }
 
+
+
 </style>
 </head>
 <body>
     
 <div id="line-chart"></div>
+<button id="btn">click</button>
+
 
 
 <script src="./dist/bundle.js"></script>
 <script src="BarChart.js"></script>
+
 
 </body>
